force-app/main/default/objects/Nimbus_Plan__c/Nimbus_Plan__c.object-meta.xml
<CustomObject>
    <description>Synthetic Nimbus subscription plan catalog. No real data.</description>
    <label>Nimbus Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nimbus Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>