force-app/main/default/objects/Nimbus_Plan__c/fields/Data_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Data_Allowance__c</fullName>
    <description>Human-readable data/feature allowance for the plan (e.g. "50 GB", "Unlimited").</description>
    <label>Data Allowance</label>
    <length>80</length>
    <type>Text</type>
</CustomField>