force-app/main/default/objects/Nimbus_Plan__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the plan is currently offered and selectable.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>