force-app/main/default/objects/Nimbus_Plan__c/fields/Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Price__c</fullName>
    <description>Recurring monthly price for the plan.</description>
    <label>Monthly Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>